Update on Overleaf.

--- a/listas.tex
+++ b/listas.tex
@@ -3814,7 +3814,7 @@ encontre $k \in \mathbb{N}$ tal que $(AB - BA)^k = 0.$
 \[
 Z(v,T) = \{ g(T)(v) \mid g(t) \in K[t] \}.
 \]
-Para subespaço $W$ que seja $T$-invariante, então seja $\{e_1,\dots,e_m\}$ uma base de $W$. Para todo $i$ então existe um polinômio $p_i$ tal que $e_i=p_i(T)(v)$. Seja $p=\mathrm{mdc}{p_1,\dots,p_m}$. Então por Bézout existem polinômios $q_1,\dots,q_m$ tais que $p_1q_1+\dots+p_mq_m=p$, assim
+Para subespaço $W$ que seja $T$-invariante, então seja $\{e_1,\dots,e_m\}$ uma base de $W$. Para todo $i$ então existe um polinômio $p_i$ tal que $e_i=p_i(T)(v)$. Seja $p=\mathrm{mdc}(p_1,\dots,p_m)$. Então por Bézout existem polinômios $q_1,\dots,q_m$ tais que $p_1q_1+\dots+p_mq_m=p$, assim
 \[
 p(T)(v)=q_1(T)(e_1)+\dots+q_m(T)(e_m)\in W,
 \]
@@ -4424,7 +4424,7 @@ ortogonais. Discuta a afirmação para $K = \mathbb{C}.$
 \] então $u$ e $v$ são linearmente dependentes.
 \solucao{}
 \exercicio{7} Sejam $W$ um subespaço de $V$ e $v \in V.$ Um vetor $w \in W$ é uma \emph{melhor aproximação} para $v$ por
-vetores em $W$ se \[\norm{v − w} \le \norm{v − u}, \mbox{ para todo } u \in W.\] Prove que
+vetores em $W$ se \[\norm{v - w} \le \norm{v - u}, \mbox{ para todo } u \in W.\] Prove que
 \dividiritens{
 \task[\pers{a}] O vetor $w \in W$ é uma melhor aproximação para $v \in V$ por vetores em $W$ se, e somente
 se, $v − w \in W^{\perp}.$
@@ -4462,7 +4462,7 @@ seguintes afirmações são equivalentes:
 }
 Tal $T$ é um \emph{isomorfismo de espaços com produto interno.}
 \solucao{}
-\exercicio{12} Uma matriz $A \in \mathcal{M}_n(K)$ é chamada \emph{ortogonal} se $AA^t = I_n$ e \emph{unitária} se $AA^{∗} = I_n.$ Encontre um exemplo de uma matriz complexa unitária que não é ortogonal e um exemplo de uma matriz que é ortogonal e não é unitária.
+\exercicio{12} Uma matriz $A \in \mathcal{M}_n(K)$ é chamada \emph{ortogonal} se $AA^t = I_n$ e \emph{unitária} se $AA^{*} = I_n.$ Encontre um exemplo de uma matriz complexa unitária que não é ortogonal e um exemplo de uma matriz que é ortogonal e não é unitária.
 \solucao{}
 \exercicio{13} Seja $T \in \mathcal{L}(V)$ um isomorfismo de espaços com produto interno, isto é,
 \[\prin{T(u), T(v)} = \prin{u,v},
