Update on Overleaf.

--- a/listas.tex
+++ b/listas.tex
@@ -4452,7 +4452,7 @@ para todo $u \in \Ker E$ e $v \in V.$ )
 \exercicio{10}  Sejam $W$ um subespaço de dimensão finita de $V$ e $E$ a projeção ortogonal de $V$ em $W$. Prove
 que $\prin{E(v), u} = \prin{v, E(u)}$ para todos $u, v \in V.$
 \solucao{}
-\exercicio{11} Sejam $V$ e $W$ espaços vetoriais de mesma dimensão (finita) sobre $K$ e com produtos internos $\prin{,}_V$ e $\prin{,}_W,$ respectivamente. Seja T : V → W uma transformação linear. Prove que as
+\exercicio{11} Sejam $V$ e $W$ espaços vetoriais de mesma dimensão (finita) sobre $K$ e com produtos internos $\prin{,}_V$ e $\prin{,}_W,$ respectivamente. Seja $T : V \rightarrow W$ uma transformação linear. Prove que as
 seguintes afirmações são equivalentes: 
 \dividiritens{
 \task[\pers{a}] $\prin{T(u), T(v)}_W = \prin{u,v},$ para todos $u,v \in V.$
@@ -4461,6 +4461,7 @@ seguintes afirmações são equivalentes:
 \task[\pers{d}] $\norm{T(v)}_W = \norm{v}_V$ para todo $v \in V.$
 }
 Tal $T$ é um \emph{isomorfismo de espaços com produto interno.}
+\solucao{}
 \solucao{}
 \exercicio{12} Uma matriz $A \in \mathcal{M}_n(K)$ é chamada \emph{ortogonal} se $AA^t = I_n$ e \emph{unitária} se $AA^{*} = I_n.$ Encontre um exemplo de uma matriz complexa unitária que não é ortogonal e um exemplo de uma matriz que é ortogonal e não é unitária.
 \solucao{}
