--- a/main.tex
+++ b/main.tex
@@ -3126,6 +3126,176 @@ O teorema de Riesz não é válido para espaços com produto interno de dimensã
 \]
 \end{observacao}
 
+\begin{definicao}
+Agora seja $V$ um espaço com produto interno e $S$ um subconjunto de $V$. Definimos o conjunto:
+\[
+S^\perp=\{v\in V:\mid \forall s\in S:\langle v,s\rangle=0\},
+\]
+e chamamos de \textbf{complemento ortogonal} de $S$.
+\end{definicao}
+
+\begin{proposicao}
+Para qualquer subconjunto $S$ temos:
+\begin{itemize}
+\item[1)] $S^\perp$ é um subespaço de $V$.
+\item[2)] Se $W\subseteq V$ é um subespaço, então $V=W\oplus W^\perp$.
+\item[3)] Se $W\subseteq V$ é um subespaço, então $W^{\perp\perp}=W$.
+\end{itemize}
+\end{proposicao}
+\begin{proof}
+\begin{itemize}
+\item[2)] Escolhemos em $W$ uma base ortonormal $(v_1,\dots,v_k)$. Seja $u\in V$ arbitrário. Consideremos:
+\[
+\tilde{u}=\langle u,v_1\rangle v_1+dots+\langle u,v_k\rangle v_k\in W.
+\]
+Provemos que $u-\tilde{u}\in W^\perp$. Notemos que $W^\perp=\{v_1,\dots,v_k\}^\perp$. Para $i=1,\dots,k$, então temos:
+\[
+\begin{array}{rcl}
+\langle u-\tilde{u},v_i\rangle&=&\langle u,v_i\rangle-\langle\sum_{j=1}^k\langle u,v_j\rangle,v_i\rangle\\
+&=&\langle u,v_i\rangle-\sum_{j=1}^k\langle u,v_i\rangle\langle v_j,v_i\rangle\\
+&=&\langle u,v_i\rangle-\langle u,v_i\rangle\langle u,v_i\rangle\\
+&=&0;
+\end{array}
+\]
+logo $u-\tilde{u}\in W^\perp$, aí $u=\tilde{u}+(u-\tilde{u})\in W+W^\perp$. Para $v\in W\cap W^\perp$, então $\langle u,u\rangle=0$, aí $u=0$.
+\item[3)] Temos $V=W\oplus W^\perp=W^\perp\oplus W^{\perp\perp}$, aí:
+\[
+\dim(W)=\dim(V)-\dim(W^\perp)=\dim(W^{\perp\perp}),
+\]
+mas é fácil ver que $W\subseteq W^{\perp\perp}$, aí $W=W^{\perp\perp}$.
+\end{itemize}
+\end{proof}
+
+\begin{definicao}
+Para subespaço $W$ de $V$, definimos a \textbf{projeção ortogonal} como a função $E_W:V\rightarrow W$ tal que, para $v\in V$ tenhamos $v-E_W(v)\in W^\perp$.
+\end{definicao}
+
+\begin{proposicao}
+Para subespaço $W$ e para $v\in V$, temos:
+\[
+\norm{v-E_W(v)}=\min\{\norm{v-w}\mid w\in W\}.
+\]
+\end{proposicao}
+\begin{proof}
+Seja $v^\perp=v-E_W(v)$. Então para $w\in W$ temos:
+\[
+v-w=v^\perp+E_W(v)-w,
+\]
+mas $v^\perp\in W^\perp$ e $E_W(v)-w\in W$, aí:
+\[
+\norm{v-w}^2=\norm{v^\perp}^2+\norm{E_W(v)-w}^2\geq\norm{v^\perp}^2=\abs{v-E_W(v)}^2.
+\]
+\end{proof}
+
+\begin{teorema}[Desigualdade de Bessel]
+Sejam $v_1,\dots,v_k\in V$ vetores não nulos mutuamente ortogonais. Então para todo $v\in V$ temos:
+\[
+\sum_{i=1}^k\frac{\abs{\langle v,v_i\rangle}^2}{\norm{v_i}^2}\leq\norm{v}^2.
+\]
+\end{teorema}
+\begin{proof}
+\textcolor{red}{Seilah}
+\end{proof}
+
+\section{Transformação Adjunta}
+
+\begin{definicao}
+Sejam $U$ e $V$ espaços com produto interno de dimensão finita e $T\in\mathcal{L}(U,V)$. Uma \textbf{transformação adjunta} para $T$ é uma função $T^*\in\mathcal{L}(V,U)$ tal que para quaisquer $u\in U$ e $v\in V$ tenhamos:
+\[
+\langle T(u),v\rangle_V=\langle u,T^*(v)\rangle_U.
+\]
+\end{definicao}
+
+\begin{teorema}
+$T^*$ sempre existe e é única.
+\end{teorema}
+\begin{proof}
+\textcolor{red}{Preencher os detalhes.}
+
+\medskip
+\noindent
+Seja $v\in V$. Consideremos a função:
+\[
+\varphi_v:u\mapsto\langle T(u),v\rangle\in K.
+\]
+Então $\varphi_v\in U^*$. Assim, pelo teorema de Riesz, então existe um único $T^*(v)\in U$ tal que:
+\[
+\forall u\in U:\varphi_v(u)=\langle u,T^*(v)\rangle.
+\]
+Consideremos a função:
+\[
+T^*:v\mapsto T^*(v).
+\]
+É fácil ver que $T^*\in\mathcal{L}(V,U)$.
+\end{proof}
+
+\begin{teorema}
+Sejam $B=(e_1,\dots,e_n)$ e $C=(f_1,\dots,f_m)$ bases ortonormais de $U$ e $V$, e seja $T\in\mathcal{L}(U,V)$. Se $A=[T]_{B,C}$, então $A^*=[T^*]_{C,B}$.
+\end{teorema}
+\begin{proof}
+\textcolor{red}{Seilah}
+\end{proof}
+
+\begin{observacao}
+Por outro lado, consideremos $V=\mathbb{R}[t]$, e consideremos o produto interno:
+\[
+\langle f,g\rangle=\int_a^bf(t)g(t)\dif t.
+\]
+Consideremos o operador derivação $D=\mathcal{L}(V)$ dado por:
+\[
+\forall f\in\mathbb{R}:D(f)=f'.
+\]
+Então $D$ não tem um adjunto.
+\end{observacao}
+
+\begin{proposicao}
+Sejam $U$ e $V$ e $W$ espaços com produto interno de dimensão finita e sejam $T,S\in\mathcal{L}(U,V)$ e $P\in\mathcal{L}(V,W)$ e $\alpha\in K$. Então:
+\begin{itemize}
+\item $(T+S)^*=T^*+S^*.$
+\item $(\alpha T)^*=\overline{\alpha}T^*.$
+\item $(TP)^*=P^*T^*.$
+\item $T^{**}=T.$
+\end{itemize}
+\end{proposicao}
+\begin{proof}
+\textcolor{red}{É só fazer umas continhas.}
+\end{proof}
+
+\begin{definicao}
+Um operador $L\in\mathcal{L}(V)$ se chama \textbf{autoadjunto}, ou também \textbf{Hermitiano}, se e só se $T^*=T.$
+\end{definicao}
+
+\noindent
+Agora seja $T\in\mathcal{L}(U,V)$ e $b\in V$. Queremos encontrar $x\in U$ que dê a melhor aproximação da equação:
+\[
+T(x)=b,
+\]
+ou seja, queremos encontrar $x\in U$ tal que a distância:
+\[
+\norm{T(x)-b}
+\]
+seja \emph{mínima}. Isso significa encontrarmos um $x\in U$ tal que a projeção ortogonal de $b$ em $\mathrm{Im}(T)$ seja $T(x)$. Temos de encontrar $x\in U$ tal que para todo $v\in\mathrm{Im}(T)$ tenhamos:
+\[
+\langle T(x)-b,v\rangle=0;
+\]
+ou seja,
+\[
+T(x)-b\in(\mathrm{Im}(T))^\perp.
+\]
+Seja $(e_1,\dots,e_n)$ uma base de $U$. Então:
+\[
+\begin{array}{rcl}
+T(x)-b\in(\mathrm{Im}(T))^\perp&\Leftrightarrow&\forall i=1,\dots,n:\langle T(x)-b,T(e_i)\rangle=0\\
+&\Leftrightarrow&\forall i=1,\dots,n:\langle T(x),T(e_i)\rangle=\langle b,T(e_i)\rangle\\
+&\Leftrightarrow&\forall i=1,\dots,n:\langle T^*T(x),e_i\rangle=\langle T^*(b),e_i\rangle\\
+&\Leftrightarrow& T^*T(x)=T^*(b).
+\end{array}
+\]
+
+\medskip
+\noindent
+\textcolor{red}{EXEMPLO NUMÉRICO QUE ESTOU COM PREGUIÇA DE ESCREVER PORQUE É CHATO DEMAIS}
+
 \printindex
 
 \end{document}
